fix: Adjust skeleton loading animation opacity for improved visibility

--- a/src/styles/admin-styles/admin.scss
+++ b/src/styles/admin-styles/admin.scss
@@ -193,10 +193,10 @@
 
 @keyframes skeleton-loading {
   0% {
-    opacity: 0.7;
+    opacity: 0.8;
   }
   25% {
-    opacity: 0.8;
+    opacity: 0.85;
   }
   35%{
     opacity: 0.9;
@@ -208,9 +208,9 @@
     opacity: 0.9;
   }
   75% {
-    opacity: 0.8;
+    opacity: 0.85;
   }
   100% {
-    opacity: 0.7;
+    opacity: 0.8;
   }
 }
